# rust-analyzer-bug

./: Cargo.toml
src/: lib.rs
