[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = { version = "2.0.7", features = ["min-redis-compatibility-version-7-2"], default-features = false }
